2004-08-23  callum  <callum@spooky-possum.org>

	* events.c (button_press_event): Make sure that the size of the window
	is set properly for right-click reveals. Fixes bug #150796.

	* menu.c (help_update_game_name): 	
	* sol.c (game_file_to_name): Give an untranslated name to the menu
	so it is translated properly. Also use appropriate underscores in
	the gnome_app* calls so that it is hooked in properly. Fixes bug
	#148698. Also fix the menu hint so that it appears in the status bar.
	
	* sol.c (game_name_to_file): Make --variation accept file names as
	well as the english name. This is a sop to i18n by making the same
	cryptic code available to everyone.

2004-08-16  callum  <callum@spooky-possum.org>

	* card.c (get_card_picture): Added code to handle jokers. This
	caused thieves.scm to crash on startup.

	* elevator.scm (new-game): Also a layout problem (bug #150181).

	* eagle_wing.scm (new-game): Fix the layout to work with the
	scaling code. Bug #150179.

2004-07-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* pileon.scm (new-game): Fix pileon to use the new layout
	units. Fixes bug #148699.

2004-07-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* streets_and_alleys.scm (button-double-clicked): Fix logic in
	double click handling and prevent crashes (fixes bug #147996).

2004-07-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c:
	* draw.c: Remove dead code for high-lighting cards.

2004-07-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* events.c: Implement changing cursors as per Paolo Borelli's
	suggestion in bug 145197. His patch was applied, but subsequently
	completely rewritten and made a lot more complicated. I also
	imported some good cursors from eog. Also fix a crasher when
	clicking on an empty slot.

2004-06-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* events.c: Finish off click-to-move.

2004-06-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* events.c: 
	* events.h: