@@ -1,3 +1,8 @@
+2004-10-07  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* dialog.c: Patch from jrb to fix a crasher with the find
+	functionality in "Select a Game". See bug #154183.
+
 2004-08-23  callum  <callum@spooky-possum.org>
 
 	* events.c (button_press_event): Make sure that the size of the window
